fixed resizing and overflow issues in song

--- a/chordcraft.ui/src/styles/app.scss
+++ b/chordcraft.ui/src/styles/app.scss
@@ -59,6 +59,14 @@
     outline: none;
     background-color: whitesmoke;
   }
+
+  .single-song {
+    min-height: 450px;
+  }
+
+  pre {
+    overflow: unset;
+  }
 }
 
 .song-card {
